--- a/_config.yml
+++ b/_config.yml
@@ -100,11 +100,11 @@ JB :
   # Set 'provider' to false to turn analytics off globally.
   #        
   analytics :
-    provider : google 
+    provider : getclicky
     google : 
         tracking_id : 'UA-42301449-1'
     getclicky :
-      site_id : 
+      site_id : 100632782
     mixpanel :
         token : '_MIXPANEL_TOKEN_'
     piwik :
